[package]
name = "numpy-audio-limiter"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "numpy_audio_limiter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py310", "extension-module"] }
numpy = "0.27.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
